# speedometer

./: CMakeLists.txt  readme.md
speedometer_display/: CMakeLists.txt  display_settings.h  main.cpp  mainwindow.cpp  mainwindow.h  reader_worker.h  speedometerwidget.cpp  speedometerwidget.h
speedometer_ipc/: CMakeLists.txt  ipc_reader.cpp  ipc_reader.h  ipc_settings.h  ipc_writer.cpp  ipc_writer.h
speedometer_sensor/: CMakeLists.txt  main.cpp  speedometer_sensor.cpp  speedometer_sensor.h
